[gd_scene load_steps=3 format=3 uid="uid://cuqw47rul42ei"]

[ext_resource type="Script" uid="uid://bfk041ygm2jha" path="res://enemies/forward_shooting/triple_shot_enemy.gd" id="1_pobd8"]
[ext_resource type="Texture2D" uid="uid://oxx87x34q0rw" path="res://player/sprites/player.png" id="2_yd1f8"]

[node name="TripleShotEnemy" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_pobd8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.396078, 0.352941, 1, 1)
texture = ExtResource("2_yd1f8")
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(-51, 12, -51, -2, -28, -2, -8, -20, 30, -21, 39, -14, 52, -14, 52, 13, 28, 14)

[node name="ShotTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8

[node name="UpBulletMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-56, 8)

[node name="HorizontalBulletMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-56, 16)

[node name="DownBulletMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-56, 24)

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
